...G...... [ZBXNEXT-689] added protocol option to net.dns and net.dns.query keys to enable TCP based queries (wiper)
...G...... [ZBXNEXT-2325] added CPU guest and guest priority metrics to system.cpu.util[] item, supported on Linux kernels starting from 2.6.24 and 2.6.33 respectively (Juris)

Bug fixes:
A.F.I..... [ZBX-9414] fixed sorting, displaying and filtering by trends and interval in items, item prototypes and discovery rules (Ivo)
..F....... [ZBXNEXT-2791] synchronised item key helper descriptions and return values from the Zabbix manual (Richlv)
........S. [ZBX-9470] fixed bug when sometimes value cache would try to cache already cached time based request (wiper)
...G...... [ZBX-9317] changed proc.mem[] and proc.num[] to return 0 if the specified user does not exist (asaveljevs)
...G...... [ZBX-8513] changed vm.memory.size[available] key on AIX to return the sum of free and cached memory (wiper)
...G...PS. [ZBX-8993] added check for a valid reference of a global regular expression for snmptrap[], log[], logrt[] and eventlog[] items and logeventid(), regexp() and iregexp() trigger functions (igors)
..F....... [ZBX-8698] fixed "Unlink and clear" button being displayed when cloning or full cloning host or template and fixed spacing between "Name" and "Action" in "Linked templates" block in template edit form (Ivo, Krists)
..F....... [ZBX-9018] fixed updating of "config" table in Administration -> General pages (Oleg, Sasha)
...G...PS. [ZBX-9002] fixed log file locking during logging (igors)
..F....... [ZBX-8943] fixed script ordering when using backslashes in popup script menus (arvids)
..F....... [ZBX-8922] fixed form element positioning issues in host add/edit form (arvids)
..F....... [ZBX-8934] removed translation for the bytes unit prefixes (KB, MB, etc) (arvids)
..F....... [ZBX-8888] fixed history.php showing data for 11 more seconds than the defined interval (arvids)